# cognitivecluster

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml
cognitivecluster/: __init__.py  clusters.py
tests/: test_cognitivecluster.py
