[tool.poetry]
name = "cognitivecluster"
version = "0.2.0"
description = "A library to cluster partners based on metacognitive diversity"
authors = [
  "Michael Simpson <michael@snthesis.com>",
  "Mary Jane Simpson <msimpson@middlebury.edu>"
]
readme = "README.md"
repository = "https://github.com/mjs2600/cognitivecluster"
classifiers = [
  "Natural Language :: English",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

[tool.poetry.dependencies]
python = "~3.6"
tensorflow = "^1.12"
tensorflow-hub = "^0.2.0"
scikit-learn = "^0.20.2"
numpy = "^1.16"
pandas = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
mypy = "^0.650.0"
python-language-server = {version = "^0.21.4",extras = ["all"]}
isort = "^4.3"
pylint = "^2.2"
pytest-watch = "^4.2"
pytest-mock = "^1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
